# advent_of_code_2022

./: CMakeLists.txt  README.md
cmake/: AddTestTools.cmake
day_1/: CMakeLists.txt
day_1/inc/: calorie_count.hpp
day_1/src/: calorie_count.cpp  main.cpp
utils/: CMakeLists.txt
utils/inc/: utils.hpp
utils/src/: utils.cpp
